corrected deliberate error

--- a/upload/codepkg/classes/SampleDeployClass.cls
+++ b/upload/codepkg/classes/SampleDeployClass.cls
@@ -3,7 +3,7 @@ public class SampleDeployClass {
     public static testmethod void t1() {
         helloMethod();
 
-        Account acc = new Account(Name= 'fred')
+        Account acc = new Account(Name= 'fred');
         insert acc; // hit the trigger
 
         // Check that the trigger properly set the phone field:
